[gd_scene load_steps=18 format=3 uid="uid://cey4wuep5drty"]

[ext_resource type="Script" uid="uid://br4ul5x3t6hnp" path="res://src/game/entities/enemies/enemy.gd" id="1_i8idp"]
[ext_resource type="Texture2D" uid="uid://dkrfip6ir6mvx" path="res://assets/textures/enemies/slime/Slime_Spiked_Full.png" id="1_paah2"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rfvys"]
size = Vector2(25.333334, 22.666668)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phf73"]
size = Vector2(19.833334, 16.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_i8idp"]
atlas = ExtResource("1_paah2")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae7xc"]
atlas = ExtResource("1_paah2")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iplvi"]
atlas = ExtResource("1_paah2")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg1dj"]
atlas = ExtResource("1_paah2")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxdrg"]
atlas = ExtResource("1_paah2")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_kppe4"]
atlas = ExtResource("1_paah2")
region = Rect2(320, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijm5m"]
atlas = ExtResource("1_paah2")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_im7nu"]
atlas = ExtResource("1_paah2")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyjmi"]
atlas = ExtResource("1_paah2")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ijm5m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8idp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae7xc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iplvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg1dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxdrg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kppe4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijm5m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijm5m")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_im7nu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyjmi")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_im7nu"]
radius = 180.03087

[sub_resource type="Gradient" id="Gradient_phf73"]
interpolation_mode = 2
interpolation_color_space = 2
offsets = PackedFloat32Array(0, 0.9099099)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7phyx"]
gradient = SubResource("Gradient_phf73")
width = 512
height = 512
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0, 0.5)

[node name="Enemy" type="CharacterBody2D"]
scale = Vector2(1.5, 1.5)
collision_layer = 17
collision_mask = 5
script = ExtResource("1_i8idp")
gravity = 600.0
min_view_distance_when_close = 250.0

[node name="CollisionArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionAreaShape2D" type="CollisionShape2D" parent="CollisionArea"]
position = Vector2(0.6666665, -1.333334)
shape = SubResource("RectangleShape2D_rfvys")

[node name="CollisionCharacterBodyShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.6666667, -0.6666667)
shape = SubResource("RectangleShape2D_phf73")

[node name="AnimatedEnemy2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1, -9.000001)
scale = Vector2(1.0234377, 1.0390625)
sprite_frames = SubResource("SpriteFrames_ijm5m")
animation = &"idle"
frame = 1
frame_progress = 0.77476984

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionDetectionAreaShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_im7nu")
debug_color = Color(0.9129193, 0.12392347, 0.6461564, 0.41960785)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_max_distance = 200.0

[node name="PointLight2D" type="PointLight2D" parent="." groups=["dynamic_light"]]
visible = false
texture_filter = 1
position = Vector2(0.6666667, -4.666667)
enabled = false
color = Color(0.83560866, 0.22103363, 0.3614848, 1)
energy = 0.33
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.9254902)
shadow_filter = 1
texture = SubResource("GradientTexture2D_7phyx")
metadata/_edit_group_ = true

[node name="Timers" type="Node" parent="."]

[node name="DamageTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="TimerMakePath" type="Timer" parent="Timers"]
wait_time = 0.5
autostart = true

[node name="KnockbackTimer" type="Timer" parent="Timers"]

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 5
collide_with_areas = true

[node name="AlwaysUpRayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, -23)
collision_mask = 5

[connection signal="body_entered" from="CollisionArea" to="." method="_on_collision_area_body_entered"]
[connection signal="animation_finished" from="AnimatedEnemy2D" to="." method="_on_animated_enemy_2d_animation_finished"]
[connection signal="animation_looped" from="AnimatedEnemy2D" to="." method="_on_animated_enemy_2d_animation_looped"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="timeout" from="Timers/TimerMakePath" to="." method="_on_timer_make_path_timeout"]
